[gd_scene load_steps=9 format=3 uid="uid://cqh6es6gvfedq"]

[ext_resource type="PackedScene" uid="uid://dx2d67sdy5p5g" path="res://scenes/player.tscn" id="1_1ak6a"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_eyjvw"]
[ext_resource type="AudioStream" uid="uid://dkvua7agqbyav" path="res://art/Sounds/coin_collect_sound1.wav" id="3_6mgmu"]
[ext_resource type="AudioStream" uid="uid://dm528cbs8me2g" path="res://art/Sounds/coin_collect_sound2.wav" id="4_je71c"]
[ext_resource type="AudioStream" uid="uid://dnm0hx6scq6nd" path="res://art/Sounds/coin_collect_sound3.wav" id="5_tamay"]
[ext_resource type="AudioStream" uid="uid://d16pu5el11msc" path="res://art/Sounds/coin_disappear.ogg" id="6_bqics"]
[ext_resource type="AudioStream" uid="uid://ddxrvo6nf70ka" path="res://art/Sounds/game_theme_music.mp3" id="7_awuei"]
[ext_resource type="AudioStream" uid="uid://cqxqpy0xw1ail" path="res://art/Sounds/death_sound.ogg" id="8_p5n04"]

[node name="World" type="Node2D"]
script = ExtResource("1_eyjvw")

[node name="Player" parent="." instance=ExtResource("1_1ak6a")]
position = Vector2(648, 363)

[node name="SpawnedCoins" type="Node" parent="."]

[node name="SpawnedEnemies" type="Node" parent="."]

[node name="CoinSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CoinCountLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.614289, 0.450121, 0.193963, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Coins: 0"

[node name="TimeLeftLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.614289, 0.450121, 0.193963, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 32
text = "Time Left: 30"

[node name="Sounds" type="Node" parent="."]

[node name="coin_collect_sound1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_6mgmu")

[node name="coin_collect_sound2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_je71c")

[node name="coin_collect_sound3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_tamay")

[node name="coin_disappear" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("6_bqics")
volume_db = 24.0

[node name="game_theme_music" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_awuei")
pitch_scale = 0.9
autoplay = true

[node name="death_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("8_p5n04")
volume_db = 12.0
pitch_scale = 0.5

[connection signal="timeout" from="CoinSpawnTimer" to="." method="_on_coin_spawn_timer_timeout"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
